data/derived/sp14/progs/unify/prog0214.ml.out
Characters 104-105:
  | h::t -> (mulByDigit i (List.rev t) ) :: 0 @  h*i :: [];;
                                            ^
Error: This expression has type int but an expression was expected of type
         'a list list
